2. chỉnh sửa lần 2 thêm file nhumm

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ngoccc</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Bin</h1>
-</body>
+    <h2>Ngọc</h2>
+  </body>
 </html>
